{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 585,
  "lineage": "6812d5c5-124a-5cb7-8553-13a313edf62d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c4aa36a261101d9",
            "arn": "arn:aws:ec2:us-east-2:643913569214:elastic-ip/eipalloc-00c4aa36a261101d9",
            "association_id": "eipassoc-0d9f38f43fa330872",
            "domain": "vpc",
            "id": "eipalloc-00c4aa36a261101d9",
            "network_border_group": "us-east-2",
            "network_interface": "eni-06ce34daf8da526dd",
            "private_dns": "ip-10-1-1-169.us-east-2.compute.internal",
            "private_ip": "10.1.1.169",
            "public_dns": "ec2-3-14-23-111.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.23.111",
            "public_ipv4_pool": "amazon",
            "tags": {
              "AZ": "us-east-2a",
              "Environment": "dev",
              "Name": "incodefy-nat-eip-az1-dev",
              "Project": "incodefy"
            },
            "tags_all": {
              "AZ": "us-east-2a",
              "Environment": "dev",
              "Name": "incodefy-nat-eip-az1-dev",
              "Project": "incodefy"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0757ef9b7283d1caf",
            "arn": "arn:aws:ec2:us-east-2:643913569214:elastic-ip/eipalloc-0757ef9b7283d1caf",
            "association_id": "eipassoc-0e2aeb968213ea13e",
            "domain": "vpc",
            "id": "eipalloc-0757ef9b7283d1caf",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0199ac8dbac42128e",
            "private_dns": "ip-10-1-2-250.us-east-2.compute.internal",
            "private_ip": "10.1.2.250",
            "public_dns": "ec2-3-151-148-61.us-east-2.compute.amazonaws.com",
            "public_ip": "3.151.148.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "AZ": "us-east-2b",
              "Environment": "dev",
              "Name": "incodefy-nat-eip-az2-dev",
              "Project": "incodefy"
            },
            "tags_all": {
              "AZ": "us-east-2b",
              "Environment": "dev",
              "Name": "incodefy-nat-eip-az2-dev",
              "Project": "incodefy"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:internet-gateway/igw-0de802306b4c87838",
            "id": "igw-0de802306b4c87838",
            "owner_id": "643913569214",
            "tags": {
              "Environment": "dev",
              "Name": "incodefy-igw-dev",
              "Project": "incodefy"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "incodefy-igw-dev",
              "Project": "incodefy"
            },
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:643913569214:loadbalancer/app/incodefy-alb-dev/ce3e369629d88b32",
            "arn_suffix": "app/incodefy-alb-dev/ce3e369629d88b32",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "incodefy-alb-dev-597603441.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:643913569214:loadbalancer/app/incodefy-alb-dev/ce3e369629d88b32",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "incodefy-alb-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b467304f8f9997ca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02e625fb13805585a"
              },
              {
                "subnet_id": "subnet-0c1dda81a6b6b6fff"
              }
            ],
            "subnets": [
              "subnet-02e625fb13805585a",
              "subnet-0c1dda81a6b6b6fff"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "incodefy-alb-dev",
              "Project": "incodefy"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "incodefy-alb-dev",
              "Project": "incodefy"
            },
            "vpc_id": "vpc-0b40302fb4d857681",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:643913569214:listener/app/incodefy-alb-dev/ce3e369629d88b32/c9af325b881a76f6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:643913569214:targetgroup/incodefy-tg-dev/22175a2ee546d4a4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:643913569214:listener/app/incodefy-alb-dev/ce3e369629d88b32/c9af325b881a76f6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:643913569214:loadbalancer/app/incodefy-alb-dev/ce3e369629d88b32",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:643913569214:targetgroup/incodefy-tg-dev/22175a2ee546d4a4",
            "arn_suffix": "targetgroup/incodefy-tg-dev/22175a2ee546d4a4",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,302",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:643913569214:targetgroup/incodefy-tg-dev/22175a2ee546d4a4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:643913569214:loadbalancer/app/incodefy-alb-dev/ce3e369629d88b32"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "incodefy-tg-dev",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "incodefy-tg-dev",
              "Project": "incodefy"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "incodefy-tg-dev",
              "Project": "incodefy"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c4aa36a261101d9",
            "association_id": "eipassoc-0d9f38f43fa330872",
            "connectivity_type": "public",
            "id": "nat-0cea2772f459a7a7d",
            "network_interface_id": "eni-06ce34daf8da526dd",
            "private_ip": "10.1.1.169",
            "public_ip": "3.14.23.111",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02e625fb13805585a",
            "tags": {
              "AZ": "us-east-2a",
              "Environment": "dev",
              "Name": "incodefy-nat-az1-dev",
              "Project": "incodefy"
            },
            "tags_all": {
              "AZ": "us-east-2a",
              "Environment": "dev",
              "Name": "incodefy-nat-az1-dev",
              "Project": "incodefy"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_az1",
            "aws_internet_gateway.main",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0757ef9b7283d1caf",
            "association_id": "eipassoc-0e2aeb968213ea13e",
            "connectivity_type": "public",
            "id": "nat-0751b018fe6b2aeb7",
            "network_interface_id": "eni-0199ac8dbac42128e",
            "private_ip": "10.1.2.250",
            "public_ip": "3.151.148.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c1dda81a6b6b6fff",
            "tags": {
              "AZ": "us-east-2b",
              "Environment": "dev",
              "Name": "incodefy-nat-az2-dev",
              "Project": "incodefy"
            },
            "tags_all": {
              "AZ": "us-east-2b",
              "Environment": "dev",
              "Name": "incodefy-nat-az2-dev",
              "Project": "incodefy"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_az2",
            "aws_internet_gateway.main",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:network-acl/acl-0e6b2586189f42270",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0e6b2586189f42270",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.1.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "643913569214",
            "subnet_ids": [
              "subnet-0a0cc5c59b7a7e3aa",
              "subnet-0dc7ae69d430c22f0"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "incodefy-private-nacl-dev",
              "Project": "incodefy",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "incodefy-private-nacl-dev",
              "Project": "incodefy",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:network-acl/acl-040014f5b76123c87",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-040014f5b76123c87",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "643913569214",
            "subnet_ids": [
              "subnet-02e625fb13805585a",
              "subnet-0c1dda81a6b6b6fff"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "incodefy-public-nacl-dev",
              "Project": "incodefy",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "incodefy-public-nacl-dev",
              "Project": "incodefy",
              "Type": "Public"
            },
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4089573444",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e6b2586189f42270",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.private",
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound_from_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.1.0.0/16",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-777464257",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e6b2586189f42270",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.private",
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1309383818",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e6b2586189f42270",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.private",
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-190440739",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e6b2586189f42270",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.private",
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-140500572",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e6b2586189f42270",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.private",
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2482672179",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e6b2586189f42270",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.private",
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2374781188",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-040014f5b76123c87",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1295328146",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-040014f5b76123c87",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2426665495",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-040014f5b76123c87",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-761894617",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-040014f5b76123c87",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1866428222",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-040014f5b76123c87",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1815696449",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-040014f5b76123c87",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4154202158",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-040014f5b76123c87",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_acl.public",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:route-table/rtb-081f6870658a23e4f",
            "id": "rtb-081f6870658a23e4f",
            "owner_id": "643913569214",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cea2772f459a7a7d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AZ": "us-east-2a",
              "Environment": "dev",
              "Name": "incodefy-private-rt-az1-dev",
              "Project": "incodefy",
              "Type": "Private"
            },
            "tags_all": {
              "AZ": "us-east-2a",
              "Environment": "dev",
              "Name": "incodefy-private-rt-az1-dev",
              "Project": "incodefy",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_az1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.az1",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:route-table/rtb-03e6645517fd65ef5",
            "id": "rtb-03e6645517fd65ef5",
            "owner_id": "643913569214",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0751b018fe6b2aeb7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AZ": "us-east-2b",
              "Environment": "dev",
              "Name": "incodefy-private-rt-az2-dev",
              "Project": "incodefy",
              "Type": "Private"
            },
            "tags_all": {
              "AZ": "us-east-2b",
              "Environment": "dev",
              "Name": "incodefy-private-rt-az2-dev",
              "Project": "incodefy",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_az2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.az2",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:route-table/rtb-0b0e426ce7fff8eba",
            "id": "rtb-0b0e426ce7fff8eba",
            "owner_id": "643913569214",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de802306b4c87838",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "incodefy-public-rt-dev",
              "Project": "incodefy",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "incodefy-public-rt-dev",
              "Project": "incodefy",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c7bfb1282960809",
            "route_table_id": "rtb-081f6870658a23e4f",
            "subnet_id": "subnet-0a0cc5c59b7a7e3aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_az1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.az1",
            "aws_route_table.private_az1",
            "aws_subnet.private_az1",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0648338c5a3b979e7",
            "route_table_id": "rtb-03e6645517fd65ef5",
            "subnet_id": "subnet-0dc7ae69d430c22f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_az2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.az2",
            "aws_route_table.private_az2",
            "aws_subnet.private_az2",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5048c56a24b7b9c",
            "route_table_id": "rtb-0b0e426ce7fff8eba",
            "subnet_id": "subnet-02e625fb13805585a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fb32d504972a895",
            "route_table_id": "rtb-0b0e426ce7fff8eba",
            "subnet_id": "subnet-0c1dda81a6b6b6fff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:security-group/sg-0b467304f8f9997ca",
            "description": "Security group para Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b467304f8f9997ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP desde Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS desde Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "incodefy-alb-sg-dev",
            "name_prefix": "",
            "owner_id": "643913569214",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "incodefy-alb-sg-dev",
              "Project": "incodefy",
              "Resource": "ALB"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "incodefy-alb-sg-dev",
              "Project": "incodefy",
              "Resource": "ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:security-group/sg-006961b3476239e91",
            "description": "Security group for EC2 application instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006961b3476239e91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH desde IPs administrativas",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "HTTP desde ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b467304f8f9997ca"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "incodefy-ec2-app-sg-dev",
            "name_prefix": "",
            "owner_id": "643913569214",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "incodefy-ec2-app-sg-dev",
              "Project": "incodefy",
              "Resource": "EC2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "incodefy-ec2-app-sg-dev",
              "Project": "incodefy",
              "Resource": "EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:security-group/sg-0c9961e544214ee18",
            "description": "Security group para Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP para servicios internos",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS para servicios AWS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0c9961e544214ee18",
            "ingress": [],
            "name": "incodefy-lambda-sg-dev",
            "name_prefix": "",
            "owner_id": "643913569214",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "incodefy-lambda-sg-dev",
              "Project": "incodefy",
              "Resource": "Lambda"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "incodefy-lambda-sg-dev",
              "Project": "incodefy",
              "Resource": "Lambda"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:security-group/sg-079831bde0801f123",
            "description": "Security group para VPC Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079831bde0801f123",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "HTTPS desde VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "incodefy-vpc-endpoints-sg-dev",
            "name_prefix": "",
            "owner_id": "643913569214",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "incodefy-vpc-endpoints-sg-dev",
              "Project": "incodefy",
              "Resource": "VPC-Endpoints"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "incodefy-vpc-endpoints-sg-dev",
              "Project": "incodefy",
              "Resource": "VPC-Endpoints"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:subnet/subnet-0a0cc5c59b7a7e3aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0cc5c59b7a7e3aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643913569214",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-2a",
              "Environment": "dev",
              "Name": "incodefy-private-subnet-az1-dev",
              "Project": "incodefy",
              "Type": "Private"
            },
            "tags_all": {
              "AZ": "us-east-2a",
              "Environment": "dev",
              "Name": "incodefy-private-subnet-az1-dev",
              "Project": "incodefy",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:subnet/subnet-0dc7ae69d430c22f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc7ae69d430c22f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "643913569214",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-2b",
              "Environment": "dev",
              "Name": "incodefy-private-subnet-az2-dev",
              "Project": "incodefy",
              "Type": "Private"
            },
            "tags_all": {
              "AZ": "us-east-2b",
              "Environment": "dev",
              "Name": "incodefy-private-subnet-az2-dev",
              "Project": "incodefy",
              "Type": "Private"
            },
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:subnet/subnet-02e625fb13805585a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e625fb13805585a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "643913569214",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-2a",
              "Environment": "dev",
              "Name": "incodefy-public-subnet-az1-dev",
              "Project": "incodefy",
              "Type": "Public"
            },
            "tags_all": {
              "AZ": "us-east-2a",
              "Environment": "dev",
              "Name": "incodefy-public-subnet-az1-dev",
              "Project": "incodefy",
              "Type": "Public"
            },
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:subnet/subnet-0c1dda81a6b6b6fff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1dda81a6b6b6fff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "643913569214",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-2b",
              "Environment": "dev",
              "Name": "incodefy-public-subnet-az2-dev",
              "Project": "incodefy",
              "Type": "Public"
            },
            "tags_all": {
              "AZ": "us-east-2b",
              "Environment": "dev",
              "Name": "incodefy-public-subnet-az2-dev",
              "Project": "incodefy",
              "Type": "Public"
            },
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:vpc/vpc-0b40302fb4d857681",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0fd318fafecae6b81",
            "default_route_table_id": "rtb-0e662351cca01c8b8",
            "default_security_group_id": "sg-0db119bf38ddad22f",
            "dhcp_options_id": "dopt-0959b3f3c863888ff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b40302fb4d857681",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e662351cca01c8b8",
            "owner_id": "643913569214",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "incodefy-vpc-dev",
              "Project": "incodefy"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "incodefy-vpc-dev",
              "Project": "incodefy"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:vpc-endpoint/vpce-0bcda955b1551219c",
            "cidr_blocks": [
              "35.71.102.128/26",
              "35.71.102.0/25",
              "52.94.4.0/24"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bcda955b1551219c",
            "ip_address_type": "ipv4",
            "owner_id": "643913569214",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-4ca54025",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03e6645517fd65ef5",
              "rtb-081f6870658a23e4f"
            ],
            "service_name": "com.amazonaws.us-east-2.dynamodb",
            "service_region": "us-east-2",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "incodefy-dynamodb-endpoint-dev",
              "Project": "incodefy"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "incodefy-dynamodb-endpoint-dev",
              "Project": "incodefy"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:vpc-endpoint/vpce-07e9f8dc11d7938e9",
            "dns_entry": [
              {
                "dns_name": "vpce-07e9f8dc11d7938e9-as42n0j8.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-07e9f8dc11d7938e9-as42n0j8-us-east-2a.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-07e9f8dc11d7938e9-as42n0j8-us-east-2b.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z0187543Y66EKMJBZLXW"
              },
              {
                "dns_name": "logs.us-east-2.api.aws",
                "hosted_zone_id": "Z001930925ZY3ZU6IWMG9"
              },
              {
                "dns_name": "streaming-logs.us-east-2.api.aws",
                "hosted_zone_id": "Z00288961YSDOYACI28RL"
              },
              {
                "dns_name": "streaming-logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z01856123FROC94HOTW53"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07e9f8dc11d7938e9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05e89c5feaad1d6f3",
              "eni-0841ccfbb024efbb3"
            ],
            "owner_id": "643913569214",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-079831bde0801f123"
            ],
            "service_name": "com.amazonaws.us-east-2.logs",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.11.85",
                "subnet_id": "subnet-0a0cc5c59b7a7e3aa"
              },
              {
                "ipv4": "10.1.12.22",
                "subnet_id": "subnet-0dc7ae69d430c22f0"
              }
            ],
            "subnet_ids": [
              "subnet-0a0cc5c59b7a7e3aa",
              "subnet-0dc7ae69d430c22f0"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "incodefy-logs-endpoint-dev",
              "Project": "incodefy"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "incodefy-logs-endpoint-dev",
              "Project": "incodefy"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:vpc-endpoint/vpce-03331cf43868f7bb9",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "16.12.64.0/22",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03331cf43868f7bb9",
            "ip_address_type": "ipv4",
            "owner_id": "643913569214",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03e6645517fd65ef5",
              "rtb-081f6870658a23e4f"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "service_region": "us-east-2",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "incodefy-s3-endpoint-dev",
              "Project": "incodefy"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "incodefy-s3-endpoint-dev",
              "Project": "incodefy"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643913569214:vpc-endpoint/vpce-07108749f9d51e2d7",
            "dns_entry": [
              {
                "dns_name": "vpce-07108749f9d51e2d7-2dq1rro8.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-07108749f9d51e2d7-2dq1rro8-us-east-2b.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-07108749f9d51e2d7-2dq1rro8-us-east-2a.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ssm.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z0603025H64GMXEAILCE"
              },
              {
                "dns_name": "ssm.us-east-2.api.aws",
                "hosted_zone_id": "Z06030249B8RYTS3TU1V"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07108749f9d51e2d7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05e56205fd8ea3c1d",
              "eni-0d938031000b9d585"
            ],
            "owner_id": "643913569214",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-079831bde0801f123"
            ],
            "service_name": "com.amazonaws.us-east-2.ssm",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.11.108",
                "subnet_id": "subnet-0a0cc5c59b7a7e3aa"
              },
              {
                "ipv4": "10.1.12.24",
                "subnet_id": "subnet-0dc7ae69d430c22f0"
              }
            ],
            "subnet_ids": [
              "subnet-0a0cc5c59b7a7e3aa",
              "subnet-0dc7ae69d430c22f0"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "incodefy-ssm-endpoint-dev",
              "Project": "incodefy"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "incodefy-ssm-endpoint-dev",
              "Project": "incodefy"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b40302fb4d857681"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_az1",
            "aws_subnet.private_az2",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}